# KNeighbors-model-for-irregular-cars-data-set-from-UCI

./: main.py  pyproject.toml
